# Playground

./: .gitignore  Cargo.toml  Makefile  Problem10-summation of primes.py  Problem3.java  Problem5-smallest_multiple.py  Problem6-sum_square_diff.py  Problem9-pythagoreantriplet.py  README.md  Run.ps1  build.ps1  camera.cpp  camera.hpp  errata.md  ishader.hpp  light.cpp  line.cpp  line.hpp  main.cpp  model.cpp  model.hpp  pe1  pe1.c  pe2  pe3  pe4  pe4.c  profile-test.cpp  readme.md  render_geometry.cpp  render_geometry.hpp  render_math.cpp  render_math.hpp  shaders.cpp  shaders.hpp  simple_texture_shader.cpp  simple_texture_shader.hpp  test.py  tgaimage.cpp  tgaimage.h  (+6 more)
Assets/: GameOverCameraSpin.cs  GameOverUIController.cs  Movement.cs  Pellet.prefab  PelletPrefab.prefab  PelletSpawner.cs  PlayerCollision.cs  PointCounterUIController.cs  SnakeTailSegment.prefab
ProjectSettings/: InputManager.asset  ProjectSettings.asset  TagManager.asset
c/: a.out  pe10.c  pe3.c  pe6.c  pe7.c  pe8.c  pe9.c
caesar/: main.c
ch01/: HelloWorld.s  build-c-ref.sh
ch02/: run-exercises.sh
ch1/: build.sh
common/: Build-TinyC.ps1  TinyC_Args.h  TinyC_Err.h  TinyC_Memory.h  TinyC_SAL.h  TinyC_String.h
cs_server/: Program.cs  ReferenceServer.cs  test_client.html
data/: antialias.ppm  diffuse.ppm  metal.ppm  metal_quick.ppm  normals.ppm  output_an_image.ppm  rays_camera_background.ppm
fortune/: build.ps1
greetings/: build.ps1  build.sh  (+1 more)
swift/swift-cpp-interop-test/objctestapp/: CMakeLists.txt  main.mm
swift/swift-cpp-interop-test/swifttestapp/: CMakeLists.txt  main.swift
(+224 files in other folders)
